--- a/Foodie/Foodie/Info.plist
+++ b/Foodie/Foodie/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>사용자의 현재 위치가 앱 내에 표시되며, 주변 검색 결과를 제공하는 데 사용됩니다.</string>
 	<key>NSCameraUsageDescription</key>
 	<string>간판을 촬영하여 식당을 검색하기 위해서 카메라 권한이 필요합니다.</string>
 	<key>UIApplicationSceneManifest</key>
