--- a/Foodie/Foodie/Info.plist
+++ b/Foodie/Foodie/Info.plist
@@ -2,6 +2,11 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>사용자의 현재 위치가 앱 내에 표시되며, 주변 검색 결과를 제공하는 데 사용됩니다.</string>
 	<key>NSCameraUsageDescription</key>
